# tlcpack-ci

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
ansible/: configure-jenkins.yml  playbook.yml
ansible/systemd/: head-node.conf.tpl
config/: Dockerfile  dev.yaml
config/jenkins-jobs/: jenkins_jobs.ini  tvm.yaml
crane/: Dockerfile  Makefile  build.sh  make_with_log.sh  network.sh  run.sh  setup-virtualenv.sh  with_the_same_user
infra/: backend.tf  extra-instances.tf  main.tf  output.tf  provider.tf  route53.tf  ssh-key.tf  var.tf  vpc.tf
infra/modules/executor/: main.tf  variables.tf
infra/systemd/: head-node.conf.tpl
python/tvm_ci/: configure_ansible.py  create_backend_config.py  generate_makefile.py  lookup_availability_zones.py  utils.py
python/tvm_ci/jenkins_builder/: build_container.py  configure_jenkins.py  generate_config.py  jenkins_lib.py  run_jenkins.py
stage-scripts/: 1-create-plan-in-crane.sh  1-create-plan.sh  2-apply-plan-in-crane.sh  2-apply-plan.sh  3-provision-in-crane.sh  3-provision.sh  4-teardown-cluster.sh  util.sh
tools/: destroy.sh  ssh.sh
